--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -14,7 +14,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <title>The Theseus Paradox – Supplementary Files</title>
-  <meta name="description" content="Supplementary documents for The Theseus Paradox">
+  <meta name="description" content="Supplementary documents and literature for The Theseus Paradox">
   <meta name="author" content="Kenneth Bunker">
   <link rel="canonical" href="https://kennethbunker.github.io/theseus/files/">
 
@@ -59,12 +59,14 @@
     }
 
     /* File list styling */
+    .subhead { font-weight: 700; font-size: 0.95rem; margin: 1rem 0 .25rem; text-transform: uppercase; letter-spacing: .02em; }
     .file-list { list-style: none; padding-left: 0; margin-bottom: 0; }
     .file-list li { padding: .5rem 0; }
     .file-list li + li { border-top: 1px dashed #ddd; }
     .file-list a.file-link { font-weight: 700; text-decoration: none; color: #0077cc; }
     .file-list a.file-link:hover { text-decoration: underline; }
     .file-meta { font-size: 12px; color: #666; margin-left: .5rem; }
+    .muted { color: #6c757d; }
   </style>
 
   <link rel="alternate" type="application/rss+xml" href="https://kennethbunker.github.io/index.xml" title="Kenneth Bunker" />
@@ -99,12 +101,13 @@
 
 <div class="container">
   <h2 class="mb-2">Supplementary Files</h2>
-  <p class="text-muted">Direct-download links by chapter.</p>
+  <p class="text-muted">Direct-download links by chapter, grouped as Literature and Documents.</p>
 
   <div class="alert alert-light border jumpbar">
     <strong class="mr-2">Jump to chapter:</strong>
     <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
     <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
     <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
     <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
     <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
@@ -116,178 +119,301 @@
   </div>
 </div>
 
+<!-- CH 2 -->
 <section id="ch2" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 2 – Files</em>
+    <em>CHAPTER 2 – The 1980 Constitution</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1TZaVV3KKOSSrIKPAqKbupu6AVuKChB3g" download rel="noopener noreferrer">Arturo Valenzuela</a>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1TZaVV3KKOSSrIKPAqKbupu6AVuKChB3g" download rel="noopener noreferrer">
+          Valenzuela, Arturo (1978). <em>El quiebre de la democracia en Chile</em>. Baltimore: Johns Hopkins University Press
+        </a>
         <span class="file-meta">PDF</span>
       </li>
+    </ul>
+
+    <div class="subhead">Documents</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
     </ul>
   </div>
 </section>
 
+<!-- CH 3 -->
 <section id="ch3" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 3 – Files</em>
+    <em>CHAPTER 3 – Neoliberalism: Problem or solution?</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
         <a class="file-link" href="https://drive.google.com/uc?export=download&id=1iYznm46wfBfa74nIauaLICf79Fl9P7Sj" download rel="noopener noreferrer">El Ladrillo</a>
-        <span class="file-meta">PDF</span>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 6 -->
+<section id="ch6" class="section-box">
+  <div>
+    <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
+    <em>CHAPTER 6 – A shifting political system</em>
+  </div>
+  <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li>
+        <span class="file-link" style="color:#212529;">
+          Bunker, K. (2025). Mapping Party Systems Over Time: A Spatial Distribution of Ideological Competition in Chile. <em>Journal of Political Ideologies</em>, 1–18.
+        </span>
+        <span class="file-meta">Citation</span>
+      </li>
+      <li>
+        <span class="file-link" style="color:#212529;">
+          Bunker, K. (2025). Challenging Conventional Wisdom in New Democracies: Social Diversity, Electoral Rules, and Party System Fragmentation in Chile. <em>Election Law Journal: Rules, Politics, and Policy</em>.
+        </span>
+        <span class="file-meta">Citation</span>
+      </li>
+    </ul>
+
+    <div class="subhead">Documents</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+  </div>
+</section>
+
+<!-- CH 8 -->
 <section id="ch8" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 8 – Files</em>
+    <em>CHAPTER 8 – Emergence of a rupturist discourse</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1SJEs00jVYN1ewfE-QfYSPclMPaNw-yV1" download rel="noopener noreferrer">Bases Ciudadanas para la Nueva Constitución (Boletín 11.617-08)</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1SJEs00jVYN1ewfE-QfYSPclMPaNw-yV1" download rel="noopener noreferrer">
+          Bases Ciudadanas para la Nueva Constitución (Boletín 11.617-08)
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 9 -->
 <section id="ch9" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 9 – Files</em>
+    <em>CHAPTER 9 – October 18, 2019</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1LS98UBztGmRprOtubZaHM0SFbhopyQHO" download rel="noopener noreferrer">Ley 42.470 (Resolución N. 2)</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1LS98UBztGmRprOtubZaHM0SFbhopyQHO" download rel="noopener noreferrer">
+          Ley 42.470 (Resolución N. 2)
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 10 -->
 <section id="ch10" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 10 – Files</em>
+    <em>CHAPTER 10 – The constitutional design</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1ou1sox1QtWe7rQtUamps81I6adqQEQ78" download rel="noopener noreferrer">Bases Ciudadanas para la Nueva Constitución</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1ou1sox1QtWe7rQtUamps81I6adqQEQ78" download rel="noopener noreferrer">
+          Bases Ciudadanas para la Nueva Constitución
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=15vI8grF3w6tVotRGAdw30hPsv8rAM0be" download rel="noopener noreferrer">Nueva Agenda Social (Comunicado 123766)</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=15vI8grF3w6tVotRGAdw30hPsv8rAM0be" download rel="noopener noreferrer">
+          Nueva Agenda Social (Comunicado 123766)
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1NCBXJmr3_uRY41eegkb203_SVapPTxj8" download rel="noopener noreferrer">Acuerdo por la Paz Social y la Nueva Constitución</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1NCBXJmr3_uRY41eegkb203_SVapPTxj8" download rel="noopener noreferrer">
+          Acuerdo por la Paz Social y la Nueva Constitución
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 11 -->
 <section id="ch11" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 11 – Files</em>
+    <em>CHAPTER 11 – The rise of Gabriel Boric</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1CTnch1deKo58Aa_NOu39vXo78N7aoeTt" download rel="noopener noreferrer">Primer Discurso de Boric</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1CTnch1deKo58Aa_NOu39vXo78N7aoeTt" download rel="noopener noreferrer">
+          Primer Discurso de Boric
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 12 -->
 <section id="ch12" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 12 – Files</em>
+    <em>CHAPTER 12 – The (first) constitutional convention</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL" download rel="noopener noreferrer">Informe Final</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1XvHVe0C_NaOA0pVE5t8KibpNoyxeQxnG" download rel="noopener noreferrer">
+          Valenzuela Everke
+        </a>
+        <span class="file-meta">PDF (Literature)</span>
+      </li>
+    </ul>
+
+    <div class="subhead">Documents</div>
+    <ul class="file-list">
+      <li>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1-pFhQuJA9E1sCKFjbVSTOIy6OjpZL_mL" download rel="noopener noreferrer">
+          Informe Final
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=19eOR-MN8SLneKHbhVAYDwnAxZ9qcLSct" download rel="noopener noreferrer">Propuesta Nueva Constitución 2022</a>
-        <span class="file-meta">PDF</span>
-      </li>
-      <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1XvHVe0C_NaOA0pVE5t8KibpNoyxeQxnG" download rel="noopener noreferrer">Valenzuela Everke</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=19eOR-MN8SLneKHbhVAYDwnAxZ9qcLSct" download rel="noopener noreferrer">
+          Propuesta Nueva Constitución 2022
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 14 -->
 <section id="ch14" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 14 – Files</em>
+    <em>CHAPTER 14 – Constitutional resurrection</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1Zm53CCGUYE7RXkLMMmDWZg6Qaoyi8Cj_" download rel="noopener noreferrer">Acuerdo por Chile</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1Zm53CCGUYE7RXkLMMmDWZg6Qaoyi8Cj_" download rel="noopener noreferrer">
+          Acuerdo por Chile
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 15 -->
 <section id="ch15" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 15 – Files</em>
+    <em>CHAPTER 15 – From instability to realignment</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1d62jRjk6bE1HFgrzStWRy5wT1yY9Fwcx" download rel="noopener noreferrer">Impactos Económicos y Financieros de Retiros de Ahorros Previsionales</a>
-        <span class="file-meta">PDF</span>
+        <a class="file-link" href="https://drive.google.com/uc?export=download&id=1d62jRjk6bE1HFgrzStWRy5wT1yY9Fwcx" download rel="noopener noreferrer">
+          Impactos Económicos y Financieros de Retiros de Ahorros Previsionales
+        </a>
+        <span class="file-meta">PDF (Document)</span>
       </li>
       <li>
-        <span class="file-link" style="color:#6c757d;">Informe de Víctimas de Homicidios Consumados 2024</span>
+        <span class="file-link muted">Informe de Víctimas de Homicidios Consumados 2024</span>
         <span class="file-meta">PDF • link pending</span>
       </li>
       <li>
-        <span class="file-link" style="color:#6c757d;">2023 – Impacto Retiros (Congreso–Hacienda)</span>
+        <span class="file-link muted">2023 – Impacto Retiros (Congreso–Hacienda)</span>
         <span class="file-meta">PDF • link pending</span>
       </li>
       <li>
-        <span class="file-link" style="color:#6c757d;">Vergara y Ugarte (2023) – Migración y Delincuencia (CEP)</span>
+        <span class="file-link muted">Vergara y Ugarte (2023) – Migración y Delincuencia (CEP)</span>
         <span class="file-meta">PDF • link pending</span>
       </li>
     </ul>
   </div>
 </section>
 
+<!-- CH 16 -->
 <section id="ch16" class="section-box">
   <div>
     <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-    <em>CHAPTER 16 – Files</em>
+    <em>CHAPTER 16 – The (second) constitutional council</em>
   </div>
   <div class="inner mt-3">
+    <div class="subhead">Literature</div>
+    <ul class="file-list">
+      <li class="muted">None yet.</li>
+    </ul>
+
+    <div class="subhead">Documents</div>
     <ul class="file-list">
       <li>
-        <span class="file-link" style="color:#6c757d;">Propuesta Nueva Constitución 2023</span>
+        <span class="file-link muted">Propuesta Nueva Constitución 2023</span>
         <span class="file-meta">PDF • link pending</span>
       </li>
     </ul>
